tests/machine/x/c/in_operator.error
exit status 1
/workspace/mochi/tests/machine/x/c/in_operator.c: In function ‘_mochi_main’:
/workspace/mochi/tests/machine/x/c/in_operator.c:30:38: error: incompatible type for argument 1 of ‘contains_array_int’
   30 |   printf("%s\n", (contains_array_int(xs, 3, 2)) ? "true" : "false");
      |                                      ^~
      |                                      |
      |                                      list_int
/workspace/mochi/tests/machine/x/c/in_operator.c:19:36: note: expected ‘int *’ but argument is of type ‘list_int’
   19 | static int contains_array_int(int *arr, int len, int item) {
      |                               ~~~~~^~~
/workspace/mochi/tests/machine/x/c/in_operator.c:31:41: error: incompatible type for argument 1 of ‘contains_array_int’
   31 |   printf("%s\n", ((!(contains_array_int(xs, 3, 5)))) ? "true" : "false");
      |                                         ^~
      |                                         |
      |                                         list_int
/workspace/mochi/tests/machine/x/c/in_operator.c:19:36: note: expected ‘int *’ but argument is of type ‘list_int’
   19 | static int contains_array_int(int *arr, int len, int item) {
      |                               ~~~~~^~~
